--- a/snake.yml
+++ b/snake.yml
@@ -3,7 +3,9 @@ name: Generate snake animation
 on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
-  workflow_dispatch:  # allows manual trigger
+
+  workflow_dispatch:
+
   push:
     branches:
     - main
@@ -11,7 +13,7 @@ on:
 jobs:
   generate:
     permissions:
-      contents: write  # ensures the workflow can write to the repository
+      contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
@@ -22,10 +24,11 @@ jobs:
           github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg?palette=github-dark
 
-      - name: push snake.svg to the main branch
+
+      - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: main  # Pushes to the 'main' branch
-          build_dir: dist  # Points to the 'dist' directory where the snake.svg file is generated
+          target_branch: main
+          build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure the token has write permissions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
